--- a/MicroMovieNotebook.ipynb
+++ b/MicroMovieNotebook.ipynb
@@ -44,7 +44,7 @@
     "## Data Preparation and Understanding \n",
     "***\n",
     "\n",
-    "I mainly used 4 dataframes for analysis. Not all the data I needed for some of the analysis existed in one dataframe so they had to be merged. The variable I focused on mostly was Total Gross Box Office. This is a good metric for a company like Microsoft because they are going to want a good return on their investment. This was the sum of Foreign and Domestic Box offices in the IMDB database as well as a column in BOM gross. I plotted box office growth against studio, specfic films, genre and production budget. I dropped missing data or used data that was recent enough to have all rows filled. Gross Box Office is consistenly a larger number so it often had to be measured in Billions.  Using recent data was important to the analysis as film box offices numbers have changed drastically over the years due to the way films are made and marketed. Also inflation would have skewed the analysis had data been taken that was too old.  \n",
+    "I mainly used 4 dataframes for analysis. Not all the data I needed for some of the analysis existed in one dataframe so they had to be merged. The variable I focused on mostly was Total Gross Box Office. This is a good metric for a company like Microsoft because they are going to want a good return on their investment. This was the sum of Foreign and Domestic Box offices in the IMDB database as well as a column in BOM gross. I plotted box office growth against studio, specfic films, genre and production budget. I dropped missing data or used data that was recent enough to have all rows filled. Gross Box Office is consistently a larger number so it often had to be measured in Billions.  Using recent data was important to the analysis as film box offices numbers have changed drastically over the years due to the way films are made and marketed. Also inflation would have skewed the analysis had data been taken that was too old.  \n",
     "\n"
    ]
   },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "4        2017             80.0  Comedy,Drama,Fantasy  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -321,7 +321,7 @@
        "Shrek Forever After                             513900000  2010  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "(3387, 4)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "max      9.367000e+08  2018.000000"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -532,7 +532,7 @@
        "4   tt1060240            6.5        21"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "(146144, 6)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "max      2115.000000     51420.000000"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -734,7 +734,7 @@
        "4   tt1060240            6.5        21"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "(73856, 3)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -852,7 +852,7 @@
        "max        10.000000  1.841066e+06"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,16 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data preperation for the BOM gross movie dataframe "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +902,7 @@
        "array([2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018], dtype=int64)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -960,20 +951,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# clearing out empty values becasue we want to manipulate the data and we don't want null values to skew visualtizations \n",
-    "#may skew data \n",
-    "# bom_clean = bom_clean.dropna(axis=0, subset=['foreign_gross'])\n",
-    "# bom_clean = bom_clean.dropna(axis=0, subset=['domestic_gross'])\n",
+    "\n",
     "bom_clean = bom_clean.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +975,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1012,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1098,7 @@
        "116     P/DW  5.076500e+09"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1178,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -1208,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1359,7 +1348,7 @@
        "4        317000000.0   $620,181,382     1.316722e+09  2017  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -1546,7 +1535,7 @@
        "59         200000000.0   $159,555,901     6.522201e+08  2018  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -1658,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -1758,7 +1747,7 @@
        "5        2018             75.0                Comedy  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1874,7 @@
        "4    513900000.0  2010  7.526000e+08  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -2039,7 +2028,7 @@
        "4  2012    8744000.0  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2182,7 @@
        "5    8744000.0  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2206,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -2356,7 +2345,7 @@
        "14      73100000.0    211100000.0  2012  284200000.0  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2369,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -2422,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,14 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2673,7 @@
        "[4677 rows x 11 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2711,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2721,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2806,7 @@
        "16    Romance  1.621648e+10"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2837,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -2871,7 +2853,7 @@
    "metadata": {},
    "source": [
     "Adventure and action really did well here. Comedy and drama not far behind. People don't like to go to films that have a simply \n",
-    "one genre of the last few listed. They would still go to see them if they elements of action and adventure. It is clear that the enegry and ambience of action and adevnture films are unmatched in terms of box office sales"
+    "one genre of the last few listed. They would still go to see them if they had elements of action and adventure. It is clear that the enegry and ambience of action and adevnture films are unmatched in terms of box office sales"
    ]
   },
   {
@@ -2898,7 +2880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2900,7 @@
        "       2.40495000e+05, 1.33800000e+03, 1.81041000e+05])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2930,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2940,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2950,7 +2932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3036,7 @@
        "177    $137,690,172      579290136.0  2018  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3065,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 54,
    "metadata": {
     "scrolled": false
    },
@@ -3118,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3127,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -3139,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -3245,7 +3227,7 @@
        "135   $335,061,807     1.146895e+09  2018  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3265,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3429,7 +3411,7 @@
        "135        160000000.0   $335,061,807     1.146895e+09  2018  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3442,7 +3424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -3608,7 +3590,7 @@
        "59         200000000.0   $159,555,901     6.522201e+08  2018  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3621,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -3667,7 +3649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This shows the production budgets of the top ten box office hits of 2018. Helps with our postive correlation as this list is only "
+    "This shows the production budgets of the top ten box office hits of 2018. Helps with our postive correlation case. Most of the films here have high production budget."
    ]
   },
   {
@@ -3698,13 +3680,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
